# ConferenceReviewAssigner

./: .gitignore  Analysis.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
Documentation/html/: _c_s_v_parser_8cpp.html  _c_s_v_parser_8cpp.js  _c_s_v_parser_8h.html  _c_s_v_parser_8h.js  _c_s_v_parser_8h_source.html  _conference_data_8h.html  _conference_data_8h_source.html  _control_8h.html  _control_8h.js  _control_8h_source.html  _graph_8h.html  _graph_8h_source.html  _menu_8cpp.html  _menu_8h.html  _menu_8h_source.html  _parameters_8h.html  _parameters_8h_source.html  _reviewer_8h.html  _reviewer_8h_source.html  _submission_8h.html  _submission_8h_source.html  annotated.html  annotated_dup.js  class_c_s_v_parser-members.html  class_c_s_v_parser.html  class_edge-members.html  class_edge.html  class_graph-members.html  class_graph.html  class_menu-members.html  class_menu.html  class_vertex-members.html  class_vertex.html  classes.html  dir_5dd65160827af56e6353642206b80129.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6cd8491d143eb218b70983dbdb3c58bc.html  dir_6cd8491d143eb218b70983dbdb3c58bc.js  dir_d182250f0c231765fc862e69db210731.html  (+29 more)
Documentation/latex/: _c_s_v_parser_8cpp.tex  _c_s_v_parser_8h.tex  _c_s_v_parser_8h_source.tex  _conference_data_8h.tex  _conference_data_8h_source.tex  _control_8h.tex  _control_8h_source.tex  _graph_8h.tex  _graph_8h_source.tex  _menu_8cpp.tex  _menu_8h.tex  _menu_8h_source.tex  _parameters_8h.tex  _parameters_8h_source.tex  _reviewer_8h.tex  (+23 more)
inputs/: input.csv
src/: main.cpp
(+221 files in other folders)
